Added ambulance waiting list API

--- a/apps/sk-ambulance-ufe/webcomponent-content.yaml
+++ b/apps/sk-ambulance-ufe/webcomponent-content.yaml
@@ -6,8 +6,10 @@ spec:
   microFrontend: sk-ambulance-ufe
   element: sk-ambulance-wl-app
   attributes:
-    - name: base-path
-      value: /sk-ambulance-wl/
+    - name: api-base
+      value: http://localhost:5001/api
+    - name: ambulance-id
+      value: bobulova
   displayRules:
     - allOf:
       - context-name: main-content
