--- a/apps/sk-ambulance-ufe/webcomponent-content.yaml
+++ b/apps/sk-ambulance-ufe/webcomponent-content.yaml
@@ -13,4 +13,4 @@ spec:
   displayRules:
     - allOf:
       - context-name: main-content
-      - path: "^(\\.?/)?sk-ambulance-wl(/.*)?$"
+      - path: "^(\\.?/)?ambulance-wl(/.*)?$"
