--- a/apps/sk-ambulance-ufe/webcomponent-link.yaml
+++ b/apps/sk-ambulance-ufe/webcomponent-link.yaml
@@ -16,7 +16,7 @@ spec:
     - name: material-icon
       value: home_health
     - name: href # presmerovanie po kliknutí na element polyfea-md-app
-      value: ./sk-ambulance-wl
+      value: ./ambulance-wl
   priority: 10
   displayRules: # pravidlá, kde sa má element vložiť v obálke
     - anyOf:
