--- a/clusters/wac-aks/install/kustomization.yaml
+++ b/clusters/wac-aks/install/kustomization.yaml
@@ -6,7 +6,7 @@ namespace: wac-hospital
 labels:
 - pairs:
     app.kubernetes.io/part-of: wac-hospital
-    app.kubernetes.io/name: sk-ambulance-wl
+    app.kubernetes.io/name: ambulance-wl
   includeSelectors: true
   includeTemplates: true
 
