--- a/apps/sk-ambulance-ufe/webcomponent-content.yaml
+++ b/apps/sk-ambulance-ufe/webcomponent-content.yaml
@@ -6,6 +6,8 @@ spec:
   microFrontend: sk-ambulance-ufe
   element: sk-ambulance-wl-app
   attributes:
+    - name: base-path
+      value: /sk-ambulance-wl/
     - name: api-base
       value: http://localhost:30081/api
     - name: ambulance-id
