--- a/apps/sk-ambulance-ufe/webcomponent-content.yaml
+++ b/apps/sk-ambulance-ufe/webcomponent-content.yaml
@@ -9,7 +9,7 @@ spec:
     - name: base-path
       value: /sk-ambulance-wl/
     - name: api-base
-      value: http://localhost:30081/api
+      value: /sk-api
     - name: ambulance-id
       value: bobulova
   displayRules:
