Added cert-manager and TLS listener

--- a/infrastructure/polyfea/http-route.yaml
+++ b/infrastructure/polyfea/http-route.yaml
@@ -29,6 +29,8 @@ spec:
           path:
             type: ReplaceFullPath
             replaceFullPath: /fea
+          scheme: https
+          port: 443
     - matches:
       - path:
           type: Exact
